locality sensitive hashing by random projections. hooked up elasticsearch support to match by levenshtein distance

--- a/app/views/QueryPageController/query.scala.html
+++ b/app/views/QueryPageController/query.scala.html
@@ -60,7 +60,7 @@
                 <ol>
                     @for((recco, index) <- recommendations.zipWithIndex) {
                         <li>
-                            @recommendationWeights(index) <a href="@recco">@recco</a>
+                            @* @recommendationWeights(index) *@<a href="@recco">@recco</a>
                         </li>
                     }
                 </ol>
