--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,6 +11,8 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <div id="page">
+            @content
+        </div>
     </body>
 </html>
