--- a/app/views/QueryPageController/query.scala.html
+++ b/app/views/QueryPageController/query.scala.html
@@ -1,5 +1,11 @@
 @(queryForm : Form[InferenceQuery], modelName : String, inferredWords : List[String], recommendations : List[String], distributionDesc : List[String])
 
+@*
+* This Source Code Form is subject to the terms of the Mozilla Public
+* License, v. 2.0. If a copy of the MPL was not distributed with this
+* file, You can obtain one at http://mozilla.org/MPL/2.0/.
+*@
+
 @import helper._
 @import helper.twitterBootstrap._
 
